# LabFisicaPython

./: README.md  pyproject.toml
aaa/: read.md
src/labfisica/: CalcStats.py  CalcVol.py  CsvScatterPlot.py  CsvXYReader.py  MMC.py  XYData.py
tests/: test_calcStats.py  test_calcVol.py  test_csvXYReader.py
