[project]
name = "labfisica"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Diaz Iturry",email = "gabriel.diaz.iturry@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)"
]

[tool.poetry]
packages = [{include = "labfisica", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
